<resources>
    <string name="app_name">The God Father App</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_connection_settings">Conf. Conexão</string>
    <string name="action_customer_settings">Cust. Conexão</string>

    <string name="tittle_authorize_capture">Autorizar/Capturar</string>
    <string name="tittle_buy_plan">Ass. Plano</string>
    <string name="tittle_cancel_refund">Cancelar/Estornar</string>
    <string name="tittle_settings">Configuração</string>
    <string name="msg_change_customer">Colocar esse cliente como principal?</string>
    <string name="msg_add_customer">Informe o customer nas configurações.</string>
    <string name="msg_status_returned">Status retornado: </string>
    <string name="msg_authorization_fail">Falha na autorização.</string>
    <string name="msg_request_error">Erro ao realizar requisição.</string>
    <string name="tittle_register_customer">Cad. Cliente</string>
    <string name="msg_cancellation_fail">Falha no cancelamento.</string>
    <string name="msg_register_customer_fail">Falha no cadastro.</string>
    <string name="url_not_configured">Url não configurada!</string>
    <string name="msg_add_payments_url">Cadastre a url de payments nas configs.</string>
    <string name="tittle_register_credit_card">Cad. Cartão</string>
    <string name="tittle_list_payments">Listar cobranças</string>
    <string name="tittle_list_subscriptions">Listar assinaturas</string>
    <string name="tittle_create_subscription">Assinatura</string>
    <string name="tittle_list_credit_cards">Listar Cartões</string>
    <string name="msg_add_subscrition_url">Cadastre a url de subscription nas configs.</string>
    <string name="label_district">Bairro</string>
    <string name="label_save">Salvar</string>
    <string name="label_postal_code">CEP</string>
    <string name="label_number">Número</string>
    <string name="label_address">Endereço</string>
    <string name="label_cpf">CPF</string>
    <string name="label_name">Nome</string>
    <string name="label_email">E-mail</string>
    <string name="label_last_digits">Ultimos digitos</string>
    <string name="label_brand">Bandeira</string>
    <string name="label_validate_date">Data de validade</string>
    <string name="label_bin">Bin</string>
    <string name="label_holer">Holder</string>
    <string name="label_token">Token</string>


</resources>
